--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "devDependencies": {
     "@playwright/test": "^1.27.1"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test"
+  },
   "dependencies": {
+    "eslint-plugin-react": "^7.20.3",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
@@ -16,4 +24,5 @@
     "playwright-core": "^1.27.1",
     "typescript": "^4.8.4"
   }
+
 }
