--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 node_modules/
-/test-results/
 /playwright-report/
 /playwright/.cache/
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/test-results/
+/test/test*.spec.ts
