--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,30 @@
 {
   "editor.fontSize": 20,
   "window.zoomLevel": 1,
+  "favorites.resources": [
+    {
+      "filePath": "packages\\app\\auto\\test\\TestStrategy\\3.componentLevel",
+      "group": "Default"
+    },
+    {
+      "filePath": "packages\\app\\auto\\e2e\\autotest",
+      "group": "Default"
+    },
+    {
+      "filePath": "packages\\app\\playwright.config.ts",
+      "group": "Default"
+    },
+    {
+      "filePath": "packages\\app\\auto\\e2e\\autoDEMO",
+      "group": "Default"
+    },
+    {
+      "filePath": "packages\\app\\auto\\src\\ATF\\Framework",
+      "group": "Default"
+    },
+    {
+      "filePath": "src\\TestScripts\\Grocery\\createCustomer",
+      "group": "Default"
+    }
+  ],
 }
